<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string-array name="listdata">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
        <item>item 6</item>
        <item>item 7</item>
        <item>item 8</item>
        <item>item 9</item>
        <item>item 10</item>
        <item>item 11</item>
        <item>item 12</item>
        <item>item 13</item>
        <item>item 14</item>
        <item>item 15</item>
        <item>item 16</item>
        <item>item 17</item>
        <item>item 17</item>
        <item>item 18</item>
        <item>item 19</item>
        <item>item 20</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>



        <string name="action_settings">Settings</string>
        <string name="string_enter_name">Enter your name</string>
        <string name="string_choose_username">Choose your username</string>
        <string name="string_choose_password">Choose your password</string>
        <string name="string_enter_email">Enter your email</string>
        <string name="button_register">Register</string>
        <string name="Login">Login</string>
        <string name="Email">Email</string>
        <string name="Id">Id</string>
        <string name="password">password</string>
        <string name="register_here">register_here</string>
        <string name="GetLocation">GetLocation</string>

    <string name="player_error">Error initializing YouTube player</string>

</resources>